--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,24 @@ spring.data.mongodb.uri = mongodb+srv://fairofox_db_user:CPs5PjoFRryUmB8h@cluste
 server.port=8080
 
 # Eureka
-eureka.client.enabled=true
-# eureka.client.service-url.defaultZone=${EUREKA_URL:http://eureka-server:8761/eureka}
+eureka.client.enabled=false
 eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
-
 eureka.instance.prefer-ip-address=true
-# eureka.instance.ip-address=192.168.99.205
+
+# Kafka Consumer
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=customer-service
+#spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
+spring.kafka.consumer.properties.schema.registry.url=http://localhost:8081
+spring.kafka.consumer.properties.specific.avro.reader=true
+
+# Kafka Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+spring.kafka.properties.schema.registry.url=http://localhost:8081
+
+# Nivel general del logging
+logging.level.root=INFO
